# dualfisheye2equi

./: CMakeLists.txt  README.txt  dualfisheye2equi.cpp  myLaunch_dual2equi.sh
data/: RicohThetaS_calib.xml  RicohThetaS_calib_withTrans.xml
